--- a/index.html
+++ b/index.html
@@ -3,17 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="author" content="Dave Gray">
+    <meta name="description" content="This page contains all the things I am learning how to create as I learn HTML.">
     <title>My First Web Pages</title>
-    <style>
-        html {
-            font-size: 22px;
-        }
-
-        body {
-            background-color: #333;
-            color: white;
-        }
-    </style>
+    <link rel="icon" href="html5.png" type="image/x.icon">
+    <link rel="stylesheet" href="main.css" type="text/css">
 </head>
 
 <body>
