--- a/index.html
+++ b/index.html
@@ -17,12 +17,13 @@
     <p>This is my first web page.</p>
 
     <h3>My Daily Schedule</h3>
-    <p>Let me tell you how I...
-        <br>&nbsp;&nbsp;&nbsp;... I learn more about web dev.
-        <br>&nbsp;&nbsp;&nbsp;... I plan out my Schedule.
-        <br>&nbsp;&nbsp;&nbsp;... I use resources from <abbr title="Mozilla Developer Network">MDN</abbr>.
-    </p>
-
+    <p>Let me tell you how I...</p>
+    <ol>
+        <li>... I learn more about web dev.</li>
+        <li>... I plan out my Schedule.</li>
+        <li>... I use resources from <abbr title="Mozilla Developer Network">MDN</abbr>.</li>
+    </ol>
+    
     <hr>
 
     <h2>I am Also Planning a Vacation</h2>
@@ -30,17 +31,32 @@
     <p>I live in <abbr title="Kansas">KS</abbr> so I want visit a beach.</p>
 
     <h3>Place I'd Like to Visit</h3>
-    <p>I've heard good things about the Caribbean.</p>
-    <p>I've heard good things about going here:</p>
-    <address>
-        Margaritaville Island Reserve Riviera Cancún<br>
-        Bahia Petempich Puerto Morelos, Mexico<br>
-        Colonia Morelos, México 77580
-    </address>
-
+    <ul>
+        <li>
+            <p>I've heard good things about the Caribbean.</p>
+        </li>
+        <li>
+            <p>I've heard good things about going here:</p>
+            <address>
+                Margaritaville Island Reserve Riviera Cancún<br>
+                Bahia Petempich Puerto Morelos, Mexico<br>
+                Colonia Morelos, México 77580
+            </address>
+        </li>
+    </ul>
+    
     <!-- TODO: Add more places -->
     <h3>Place I want to Avoid</h3>
-    <p>Anywhere cold. <strong>No way!</strong></p>
+    <dl>
+        <dt>North Pole</dt>
+        <dd>I hear this is <strong>cold</strong>!</dd>
+
+        <dt>South Pole</dt>
+        <dd>This is also cold.</dd>
+
+        <dt>Mountain Tops</dt>
+        <dd>These are also cold.</dd>
+    </dl>
 
     <hr>
 
