add: lesson 06 - review img

--- a/index.html
+++ b/index.html
@@ -32,7 +32,14 @@
     <section id="html">
         <h2>Estou revisando HTML</h2>
         <p>Essa é a primeira página de revisão.</p>
-
+        <img src="img/html_logo_300x300.png" alt="HTML5 Logo" title="Revisão de HTML5" width="300" height="300">
+        <figure>
+            <figcaption>Exemplo de código HTML5</figcaption>
+            <p>
+                <code>&lt;h1&gt;Hello World&lt;/h1&gt;</code>
+            </p>
+            
+        </figure>
         <h3>Minha Agenda Diária</h3>
         <p>O que eu costumo fazer durante o dia...</p>
         <ol>
@@ -55,12 +62,20 @@
         <ul>
             <li>
                 <p>Ouvi falar de ótimas praias em São Sebastião e Bertioga</p>
+                <img src="img/caribbean.jpg" alt="Praia de Bertioga" title="Quero visitar algumas praias." width="400" height="225" loading="lazy">
+                <figcaption>
+                    Praia de Bertioga
+                </figcaption>
             </li>
             <li>
                 <p>Quero conhecer essa aqui, pois fica mais perto: </p>
                 <address>
                     Bertioga - SP, 11250-000
                 </address>
+                <figure>
+                    <img src="img/vacation.jpg" alt="Passeio na Praia" title="Preciso conhecer essa praia">
+                    <figcaption>Uma praia linda</figcaption>
+                </figure>
             </li>
         </ul>
         
