--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta name="author" content="Letícia França">
     <meta name="description" content="Essa página contém informações sobre mim, Letícia França.">
     <title>Sobre Mim</title>
-    <link rel="icon" href="html5.png" type="image/x.icon">
+    <link rel="icon" href="./img/html5.png" type="image/x.icon">
     <link rel="stylesheet" href="main.css" type="text/css">
 </head>
 
