add: lesson 09 - forms get and post

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
                 <li>
                     <a href="#vacation">Planejando uma viagem</a>
                 </li>
+                <li>
+                    <a href="#contact">Entre em contato</a>
+                </li>
             </ul>
         </nav>
     </header>
@@ -151,6 +154,118 @@
                     <dd>Quero conhecer o Museu do Louvre.</dd>
                 </dl>
             </section>
+        </article>
+
+        <hr>
+
+        <article id="contact">
+            <h2>Entre em contato</h2>
+            <p>Fique a vontade para me mandar uma mensagem!</p>
+
+            <form action="https://httpbin.org/get" method="get">
+                <fieldset>
+                    <legend>Informações Pessoais</legend>
+                <p>
+                    <label for="firstName">Nome:</label>
+                    <input type="text" name="firstName" id="firstName" placeholder="Maria" autocomplete="on" required autofocus>
+                </p>
+                <p>
+                    <label for="lastName">Sobrenome:</label>
+                    <input type="text" name="lastName" id="lastName" placeholder="Andrade" autocomplete="on" required>
+                </p>
+                <p>
+                    <label for="password">Senha:</label>
+                    <input type="password" name="password" id="password" required>
+                </p>
+                <p>
+                    <label for="phone">Telefone:</label>
+                    <input type="tel" name="phone" id="phone" placeholder="(11) xxxxx-xxxx" pattern="[0-9]{5}-[0-9]{4}" required>
+                </p>
+                <p>
+                    <label for="decade">Década:</label>
+                    <input type="number" name="decade" id="decade" min="1950" max="2030" step="10" value="2000">
+                </p>
+                <p>
+                    <label for="coffe">Café Favorito:</label>
+                    <select name="coffe" id="coffe" multiple size="5">
+                        <optgroup label="Coffes">
+                            <option value="regular coffe">Regular Coffe</option>
+                            <option value="iced coffe">Iced Coffe</option>
+                        </optgroup>
+                        <optgroup label="Espresso Drinks">
+                            <option value="latte">Latte</option>
+                            <option value="cappuccino" selected>Cappuccino</option>
+                            <option value="cortado">Cortado</option>
+                            <option value="americano">Americano</option>
+                        </optgroup>
+                        <option value="other">Outro</option>
+                    </select>
+                </p>
+            </fieldset>
+            <br>
+            <fieldset>
+                <legend>Qual sua comida favorita?</legend>
+                <p>
+                    <input type="radio" name="food" id="tacos" value="tacos">
+                    <label for="tacos">Tacos</label>
+                </p>
+                <p>
+                    <input type="radio" name="food" id="pizza" value="pizza">
+                    <label for="pizza">Pizza</label>
+                </p>
+                <p>
+                    <input type="radio" name="food" id="lanche" value="lanche">
+                    <label for="lanche">Lanche</label>
+                </p>
+                <p>
+                    <input type="radio" name="food" id="frutas" value="frutas">
+                    <label for="frutas">Frutas</label>
+                </p>
+                <p>
+                    <input type="radio" name="food" id="legumes" value="legumes">
+                    <label for="legumes">Legumes</label>
+                </p>
+                <p>
+                    <input type="radio" name="food" id="outros" value="outros">
+                    <label for="outros">Outros</label>
+                </p>
+            </fieldset>
+            <br>
+            <fieldset>
+                <legend>Você tem algum pet?</legend>
+                <p>
+                    <input type="checkbox" name="pets" id="cachorro" value="cachorro">
+                    <label for="cachorro">Cachorro</label>
+                </p>
+                <p>
+                    <input type="checkbox" name="pets" id="gato" value="gato">
+                    <label for="gato">Gato</label>
+                </p>
+                <p>
+                    <input type="checkbox" name="pets" id="hamster" value="hamster">
+                    <label for="hamster">Hamster</label>
+                </p>
+                <p>
+                    <input type="checkbox" name="pets" id="peixe" value="peixe">
+                    <label for="peixe">Peixe</label>
+                </p>
+                <p>
+                    <input type="checkbox" name="pets" id="outroPet" value="outroPet">
+                    <label for="outroPet">Outros</label>
+                </p>
+            </fieldset>
+            <br>
+            <fieldset>
+                <legend>Deixe um recado</legend>
+                <label for="message">Seu recado:</label>
+                <br>
+                <textarea name="message" id="message" cols="30" rows="10" placeholder="Escreva seu recado aqui"></textarea>
+            </fieldset>
+            <br>
+            <button type="submit">Enviar</button>
+            <button type="submit" formaction="https://httpbin.org/post" formmethod="post">Post</button>
+            <button type="reset">Limpar tudo</button>
+            </form>
         </article>
     </main>
 
